test/libsolidity/syntaxTests/parsing/address_constant_payable.sol
contract C {
    address constant payable b = address('lat1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq542u6a');
}
// ----
// ParserError 2314: (34-41): Expected identifier but got 'payable'
